# Financial-Advisor-Agent

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/billing/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/market/: page.tsx
frontend/src/app/portfolio/: page.tsx
frontend/src/app/quantum/: page.tsx
frontend/src/app/sentiment/: page.tsx
frontend/src/components/: Header.tsx  ModelSelector.tsx  ProfileMenu.tsx  SettingsModal.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  market-data.ts
qdrant_storage/: raft_state.json
quantum-finance-ai/: README.md  metadata.json
quantum-finance-ai/src/: App.tsx  index.css
quantum-finance-ai/src/services/: geminiService.ts
src/: config.py
src/agent/: __init__.py  agent.py  history.py  tools.py
src/api/: app.py
src/auth/: supabase.py
src/billing/: __init__.py  routes.py  stripe_service.py
src/core/: config.py
src/data/: __init__.py  fetch.py  vector_db.py
src/jobs/: functions.py  inngest_client.py
src/ml/: __init__.py  models.py  preprocessing.py  sentiment.py
src/models/: __init__.py  schemas.py
src/quantum/: __init__.py  portfolio.py  qaoa.py
src/rag/: __init__.py  context_builder.py  generator.py  pipeline.py  retriever.py
src/saas/: __init__.py  entitlements.py  models.py  repository.py  routes.py  usage.py
src/services/: __init__.py  chunker.py  embedding.py  ingestion.py  news_fetcher.py
supabase/migrations/: 001_saas_foundation.sql  002_billing_plan_sync.sql
tests/integration/: test_embedding.py
tests/unit/: test_agent.py  test_api_status.py  test_billing.py  test_chunker.py  test_config.py  test_entitlements.py  test_ml.py  test_portfolio.py  test_saas_auth.py  test_saas_routes.py  test_schemas.py
ui/: package-lock.json  package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/components/: Sidebar.tsx
ui/src/hooks/: useAgentChat.ts
(+34 files in other folders)
